pages/primitives/docs/components/tabs/0.0.2/index.mdx
---
title: Tabs
name: tabs
description: A set of layered sections of content—known as tab panels—that display one panel of content at a time.
aria: https://www.w3.org/TR/wai-aria-practices-1.2/#tabpanel
features:
  - Can be controlled or uncontrolled.
  - Supports horizontal/vertical orientation.
  - Supports automatic/manual activation.
  - Full keyboard navigation.
---

import { TabsHero } from '../../../../../../components/Hero/TabsHero';

<HeroSlot>
  <TabsHero />
</HeroSlot>

## Installation

Install the component from your command line.

```bash
npm install @radix-ui/react-tabs
```

## Anatomy

Import the components and piece the parts together.

```jsx
import * as Tabs from '@radix-ui/react-tabs';

export default () => (
  <Tabs.Root>
    <Tabs.List>
      <Tabs.Tab />
    </Tabs.List>
    <Tabs.Panel />
  </Tabs.Root>
);
```

## Basic example

Create your styled tabs component from the primitive parts.

```jsx live manual
// import { styled } from 'path-to/stitches.config';
import * as Tabs from '@radix-ui/react-tabs';

const StyledTabs = styled(Tabs.Root, {
  display: 'flex',
  flexDirection: 'column',
});

const StyledList = styled(Tabs.List, {
  flexShrink: 0,
  display: 'flex',
  borderBottom: '1px solid gainsboro',
});

const StyledTab = styled(Tabs.Tab, {
  flexShrink: 0,
  padding: '10px 20px',
  color: 'slategray',
  userSelect: 'none',

  '&:hover': { color: 'black' },

  '&[data-state="active"]': {
    color: 'black',
    boxShadow:
      'inset 0 -1px 0 0 currentColor, 0 1px 0 0 currentColor',
  },
});

const StyledPanel = styled(Tabs.Panel, {
  flexGrow: 1,
  padding: 20,
});

export default () => (
  <StyledTabs defaultValue="tab1">
    <StyledList aria-label="tabs example">
      <StyledTab value="tab1">One</StyledTab>
      <StyledTab value="tab2">Two</StyledTab>
      <StyledTab value="tab3">Three</StyledTab>
    </StyledList>
    <StyledPanel value="tab1">Tab one content</StyledPanel>
    <StyledPanel value="tab2">Tab two content</StyledPanel>
    <StyledPanel value="tab3">Tab three content</StyledPanel>
  </StyledTabs>
);
```

<Note>

**Note:** This example uses [Stitches](https://stitches.dev) but any styling solution is [compatible](../overview/styling).

</Note>

## API Reference

### Root

Contains all the tabs component parts.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-tabs',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
    {
      name: 'defaultValue',
      required: false,
      type: 'string',
      description:
        'The value of the tab that should be active when initially rendered. Use when you do not need to control the state of the tabs.',
    },
    {
      name: 'value',
      required: false,
      type: 'string',
      description: (
        <span>
          The controlled value of the tab to activate. Should be used
          in conjunction with <Code>onValueChange</Code>.
        </span>
      ),
    },
    {
      name: 'onValueChange',
      required: false,
      type: '(value: string) => void',
      typeSimple: 'function',
      description: 'Event handler called when the value changes.',
    },
    {
      name: 'orientation',
      required: false,
      type: '"horizontal" | "vertical" | undefined',
      typeSimple: 'enum',
      default: '"horizontal"',
      description: 'The orientation of the component.',
    },
    {
      name: 'activationMode',
      required: false,
      type: '"automatic" | "manual"',
      typeSimple: 'enum',
      default: '"automatic"',
      description: (
        <span>
          When <Code>automatic</Code>, tabs are activated when
          receiving focus. When <Code>manual</Code>, tabs are
          activated when clicked.
        </span>
      ),
    },
  ]}
/>

### List

Contains the tabs aligned along the edge of the active panel.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-tabs-list',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
    {
      name: 'loop',
      required: false,
      type: 'boolean',
      default: 'true',
      description: (
        <span>
          When <Code>true</Code>, keyboard navigation will loop from
          last tab to first, and vice versa.
        </span>
      ),
    },
  ]}
/>

### Tab

The button that activates its associated panel.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-tabs-tab',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
    {
      name: 'value',
      required: true,
      type: 'string',
      description:
        'A unique value that associates the tab with a panel.',
    },
    {
      name: 'disabled',
      required: false,
      type: 'boolean',
      default: 'false',
      description: (
        <span>
          When <Code>true</Code>, prevents the user from interacting
          with the tab.
        </span>
      ),
    },
  ]}
/>

### Panel

Contains the content associated with each tab.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-tabs-panel',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
    {
      name: 'value',
      required: true,
      type: 'string',
      description:
        'A unique value that associates the panel with a tab.',
    },
  ]}
/>

## Examples

### Vertical

You can create a vertical tab by using the `orientation` prop.

```jsx live manual compact
// import { styled } from 'path-to/stitches.config';
import * as Tabs from '@radix-ui/react-tabs';

const StyledTabs = styled(Tabs.Root, {
  display: 'flex',
});

const StyledList = styled(Tabs.List, {
  flexShrink: 0,
  flexDirection: 'column',
  display: 'flex',
  borderRight: '1px solid gainsboro',
});

const StyledTab = styled(Tabs.Tab, {
  flexShrink: 0,
  padding: '10px 20px',
  color: 'slategray',
  userSelect: 'none',

  '&:hover': { color: 'black' },

  '&[data-state="active"]': {
    color: 'black',
    boxShadow: 'inset -1px 0 0 currentColor, 1px 0 0 currentColor',
  },
});

const StyledPanel = styled(Tabs.Panel, {
  flexGrow: 1,
  padding: 20,
});

export default () => (
  <StyledTabs defaultValue="tab1" orientation="vertical">
    <StyledList aria-label="tabs example">
      <StyledTab value="tab1">One</StyledTab>
      <StyledTab value="tab2">Two</StyledTab>
      <StyledTab value="tab3">Three</StyledTab>
    </StyledList>
    <StyledPanel value="tab1">Tab one content</StyledPanel>
    <StyledPanel value="tab2">Tab two content</StyledPanel>
    <StyledPanel value="tab3">Tab three content</StyledPanel>
  </StyledTabs>
);
```

## Accessibility

Adheres to the [Tabs WAI-ARIA design pattern](https://www.w3.org/TR/wai-aria-practices-1.2/#tabpanel).

### Keyboard Interactions

<KeyboardTable
  data={[
    {
      keys: ['Tab'],
      description: (
        <span>
          When focus moves onto the tabs, focuses the active tab. When
          a tab contains focus, moves focus to the active panel.
        </span>
      ),
    },
    {
      keys: ['ArrowDown'],
      description: (
        <span>
          Moves focus to the next tab depending on{' '}
          <Code>orientation</Code> and activates its associated panel.
        </span>
      ),
    },
    {
      keys: ['ArrowRight'],
      description: (
        <span>
          Moves focus to the next tab depending on{' '}
          <Code>orientation</Code> and activates its associated panel.
        </span>
      ),
    },
    {
      keys: ['ArrowUp'],
      description: (
        <span>
          Moves focus to the previous tab depending on{' '}
          <Code>orientation</Code> and activates its associated panel.
        </span>
      ),
    },
    {
      keys: ['ArrowLeft'],
      description: (
        <span>
          Moves focus to the previous tab depending on{' '}
          <Code>orientation</Code> and activates its associated panel.
        </span>
      ),
    },
    {
      keys: ['Home'],
      description: (
        <span>
          Moves focus to the first tab and activates its associated{' '}
          panel.
        </span>
      ),
    },
    {
      keys: ['End'],
      description: (
        <span>
          Moves focus to the last tab and activates its associated{' '}
          panel.
        </span>
      ),
    },
  ]}
/>
